* Flow Cell Edit does not update the run folder if any of the pieces used to build it are null.  Pieces are Cluster Gen Date, instrument, run number, side and bar code.
* Folder can no longer be editted in the data pipeline grid. 
* Actual # Cycles is now editable in the Data Pipeline

5.3.6
--------------------
* Made DoNotReply address configurable (reply_email_core_facility_workauth_reminder and dataset_privacy_expiration_reply_email)
* Made changes to display error message in password-related jsps when RollBackCommandException thrown in ChangePassword.java and PublicSaveSelfRegisteredAppUser.java.
* Get http_port property using qualified name (try with appended server name first).  This will allow different port numbers to be used depending on app server.
* Don't show warning about how user isn't assigned to labs on welcome screen
* Prompt user to expand search when no experiments found.
* Added meta tags to insure login.jsp is not cached.
* Made change that allows user to enter the barcode in the Gnomex workflow even if it only has one sample.
* Fixed obscuring of long Group(Lab) names on analysis edit.
* Fixed bug that threw a billing error when a user was registering an external experiment.
* When a user registers an external Microarray experiment the Microarray slide list dropdown will be filtered based on the Organism and Experiment Platform that the user selects.
* Analysis Groups tab when editing an analysis is now read only
* Fixed issue with Analysis Group dropdowns when adding a new analysis.  Dropdown for other labs always showed Analysis Group values from first lab expanded
* Fixed issue with Project dropdowns when editing an experiment.  Dropdown for other labs always showed project values from first lab expanded.
* Added new InvoicePrice field to BillingItem to replace TotalPrice.  TotalPrice no longer used in code but will be reused when split by amount is implemented.