@@ -194,27 +194,28 @@
 					</mx:DataGridColumn>					
  	               
  	                <mx:DataGridColumn headerText="Folder name" width="40" dataField="@fileName" editable="false" itemEditor="{views.renderers.GridColumnFillButton.create(new mx.controls.TextInput(), 'flowCellNumber')}" editorDataField="value"/>			                
-					<mx:DataGridColumn headerText="Read 1 Clusters Pass Filters (M)"  width="20" dataField="@read1ClustersPassedFilterM" editable="true">			                
+					<mx:DataGridColumn headerText="Clusters Pass Filters (M)"  width="20" dataField="@read1ClustersPassedFilterM" editable="true">			                
+						<mx:itemEditor>
+							<mx:Component>
+								<mx:TextInput restrict="0-9" /> 
+							</mx:Component>
+						</mx:itemEditor> 
 						<mx:headerRenderer > 
 							<mx:Component>
 								<mx:VBox verticalGap="0"   horizontalScrollPolicy="off"  horizontalAlign="center" verticalAlign="middle">
-									<mx:Label text="Read 1 Clusters"/>
+									<mx:Label text="Clusters"/>
 									<mx:Label text="PF (M)"/>
 								</mx:VBox>
 							</mx:Component>
 						</mx:headerRenderer> 
 					</mx:DataGridColumn>					
-					<mx:DataGridColumn headerText="Read 2 Clusters Pass Filters (M)"  width="20" dataField="@read2ClustersPassedFilterM" editable="true">			                
-						<mx:headerRenderer > 
+					<mx:DataGridColumn headerText="Q30 (%)" width="14" dataField="@q30PercentForDisplay" editable="true">
+						<mx:itemEditor>
 							<mx:Component>
-								<mx:VBox verticalGap="0"   horizontalScrollPolicy="off"  horizontalAlign="center" verticalAlign="middle">
-									<mx:Label text="Read 2 Clusters"/>
-									<mx:Label text="PF (M)"/>
-								</mx:VBox>
+								<mx:TextInput restrict="0-9." /> 
 							</mx:Component>
-						</mx:headerRenderer> 
-					</mx:DataGridColumn>					
-					<mx:DataGridColumn headerText="Q30 (Gb)" width="14" dataField="@q30Gb" editable="true"/>			                
+						</mx:itemEditor> 
+					</mx:DataGridColumn>			                
 	               
 	                <mx:DataGridColumn headerText="Status"  width="20" dataField="@pipelineStatus" 
 	                	editorDataField="value" 
